--- a/css/app.css
+++ b/css/app.css
@@ -132,7 +132,7 @@ span {
   font-size: 1em;
 }
 
-h2::before {
+/*h2::before {
   margin-left: -50%;
   right: .5em;
 }
@@ -153,7 +153,7 @@ h2::before, h2::after {
   width: 40%;
   font-weight: 300;
   text-transform: uppercase;
-}
+}*/
 
 hr {
   height: 2px;
@@ -204,11 +204,11 @@ hr {
   letter-spacing: 9px;
   margin-bottom: 5%;
 }
-#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::after {
+/*#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::after {
   border: 0;
   width: 0 !important;
   margin: 0 !important;
-}
+}*/
 #buttonsWrap{
   width: 50%;
   padding-left: 5%;
@@ -269,11 +269,11 @@ hr {
   text-align: left;
   letter-spacing: 9px;
 }
-#home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::after {
+/*#home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::after {
   border: 0;
   width: 0 !important;
   margin: 0 !important;
-}
+}*/
 #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h3 {
   font-size: 2.5em;
   width: 100%;
@@ -479,6 +479,197 @@ hr {
  text-align: left;
  margin-bottom: 1%;
 }
+
+#global{
+  height: 700px;
+}
+
+#global .columns{
+  padding: 0;
+}
+
+#global div{
+  position: relative;
+}
+
+#global div h1{
+  margin: 0 auto;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  bottom: 45%;
+  color: #FFF;
+  font-size: 4em;
+}
+
+#global .graphicEle{
+  margin: 0 auto;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  bottom: 40%;
+  color: #FFF;
+}
+
+#global .graphicEle img{
+  width: 5%;
+}
+
+/*#global div div{
+  position: fixed;
+}*/
+
+#global div div img{
+  width: 100%;
+}
+
+#supply .columns{
+  padding: 0;
+}
+
+.wrapper{
+  background: #CCC;
+  border: solid 2px #888;
+  padding: 5% 2% 5% 8% !important;
+  cursor: pointer;
+}
+
+.wrapper .icons{
+  float: left;
+  padding-top: 1% !important;
+  padding-bottom: 5% !important;
+}
+
+.wrapper .icons img{
+  width: 50%;
+}
+
+.wrapper div:nth-child(2) h2{
+  font-family: "Lato", sans-serif;
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: left;
+  margin-left: 7%;
+}
+
+.wrapper div:nth-child(2) h2:nth-child(1){
+  font-size: 1.2em;
+}
+
+.wrapper div:nth-child(2) h2:nth-child(2){
+  font-size: .8em;
+}
+
+#link-twit #article1, #link-twit #article2{
+  height: 700px;
+}
+
+#link-twit div.row{
+  max-width: 100% !important;
+}
+
+#link-twit div.row div.columns{
+  padding: 0;
+}
+
+#link-twit #article1{
+  background: #FFF;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+#link-twit #headContainer{
+ margin: 0 auto;
+ padding: 2% 2%;
+ width: 100%;
+}
+
+#link-twit #headContainer .icons{
+ margin: 5% 0 0 17%;
+ width: 8%;
+}
+
+#link-twit #headContainer h1{
+ font-size: 4em;
+ float: left;
+ color: #176FC7;
+ width: 50%;
+}
+
+.graphicEle{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#link-twit #article1 > div:nth-child(2), #link-twit #article1 > div:nth-child(3), #link-twit #article1 > div:nth-child(4){
+  padding-left: 2% !important;
+  padding-top: 3% !important;
+}
+
+#link-twit #article1 div:nth-child(2) h2{
+ font-family: 'Open Sans', sans-serif;
+ color: #333;
+ font-size: 1.2em;
+ line-height: 70px;
+}
+
+#link-twit #article1 div:nth-child(2) div p, #link-twit #article1 div:nth-child(3) div p, #link-twit #article1 div:nth-child(4) div p{
+ color: #333;
+ font-size: 1.2em;
+ font-family: 'Open Sans Condensed', sans-serif;
+ width: 95%;
+ padding-right: 1.5%;
+ text-align: left;
+ margin-bottom: 1%;
+}
+
+#link-twit #article2{
+  background: #176FC7;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+#link-twit #headContainer2{
+ margin: 0 auto;
+ padding: 2% 2%;
+}
+
+#link-twit #headContainer2 .icons{
+ margin: 5% auto 0 4%;
+}
+
+#link-twit #headContainer2 h1{
+ font-size: 4em;
+ float: left;
+ color: #FFF;
+}
+
+#link-twit #article2 > div:nth-child(2), #link-twit #article2 > div:nth-child(3), #link-twit #article2 > div:nth-child(4){
+  padding-left: 2% !important;
+  padding-top: 3% !important;
+}
+
+#link-twit #article2 div:nth-child(2) div h3, #link-twit #article2 div:nth-child(3) div h3, #link-twit #article2 div:nth-child(4) div h3{
+ font-family: 'Lora', serif;
+ color: #FFF;
+ font-weight: bold;
+ text-align: left;
+}
+
+#link-twit #article2 div:nth-child(2) div p, #link-twit #article2 div:nth-child(3) div p, #link-twit #article2 div:nth-child(4) div p{
+ color: #FFF;
+ font-size: 1.2em;
+ font-family: 'Open Sans Condensed', sans-serif;
+ width: 95%;
+ padding-right: 1.5%;
+ text-align: left;
+ margin-bottom: 1%;
+}
+
+
 
 #benefits {
   background-color: #3396cb;
