--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@
 
 #header1 {
   z-index: 998;
-  background: #176FC7;
+  background: #0a0699;
   border-bottom: #FF033E solid 6px;
   -webkit-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
@@ -22,6 +22,7 @@
   background: #222;
   padding: .3% 0 1.5%;
   color: #FFF;
+  border-bottom: #FF033E solid 1px;
 }
 #header1 #socialNumber #socialWrap{
   float: right;
@@ -91,13 +92,6 @@
   background: #FF033E;
 }
 
-.headChange {
-  background: #666666;
-  -webkit-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
-  -moz-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 5px 7px 2px rgba(0, 0, 0, 0.3);
-}
-
 .logos {
   float: left;
   width: 120px;
@@ -106,18 +100,9 @@
 }
 
 .top-bar {
-  width: 910px;
+  width: 950px;
   padding-top: 1%;
   margin-top: 1%;
-}
-
-/*CSS SLIDING UNDERLINE*/
-#header2 ul li.currentLink a {
-  color: #FFF !important;
-  display: inline-block;
-  position: relative;
-  height: 1px;
-
 }
 
 ul li.currentLink a:after {
@@ -157,16 +142,7 @@ ul li.slideUnder a {
   margin: auto;
   height: 1px;
   width: 80%;
-  background: #176FC7;
-}
-
-.underLine2:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 1px;
-  width: 80%;
-  background: #FFF;
+  background: #0a0699;
 }
 
 #headMenu li:last-child{
@@ -178,24 +154,6 @@ ul li.slideUnder a {
 #headMenu li:last-child img{
   cursor: pointer;
   width: 70%;
-}
-
-#header2 {
-  z-index: 997;
-}
-
-#header2 .top-bar-section ul li:hover:not(.has-form) > a {
-  color: #333;
-  transition: color .3s ease 0s;
-}
-
-#header2 ul li.currentLink a:hover {
-  color: #333 !important;
-}
-
-#header2 .slideUnder:hover:after {
-  width: 80%;
-  background: #333;
 }
 
 /**/
@@ -261,7 +219,7 @@ hr {
   font-weight: 300;
   padding: 0 !important;
   font-size: 7em;
-  color: #176FC7;
+  color: #FFF;
   margin-top: 8%;
   margin-bottom: 1%;
 }
@@ -284,6 +242,7 @@ hr {
   letter-spacing: 9px;
   margin-bottom: 11%;
 }
+
 /*#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::after {
   border: 0;
   width: 0 !important;
@@ -396,46 +355,59 @@ hr {
   width: 15%;
 }
 
-#mission{
+#quickLink > div {
   text-align: center;
   position: relative;
   margin-top: 10%;
   padding-top: 9%;
+}
+
+#quickLink > div > div{
   background: #FFF;
-  height: 510px;
+  padding-bottom: 2%;
   border-bottom: solid 5px #FF033E;
+  padding-top: 1%;
 }
 
-#mission .icons{
-  margin-left: 14%;
+#quickLink > div > div .icons{
+  margin-left: 18%;
   padding-top: 2%;
+  float: left;
 }
 
-#mission h1{
+#quickLink > div > div .icons img{
+  width: 70%;
+}
+
+#quickLink > div > div h1{
   font-family: 'Lora', serif;
   font-weight: 300;
   font-size: 4em;
-  color: #176FC7;
+  color: #0a0699;
+  width: 70%;
 }
 
-#mission .graphic{
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  width: 15%;
-  margin: 0 auto;
-}
-
-#mission div:nth-child(2){
+#quickLink > div > div div:nth-child(2){
   margin-bottom: 0;
   margin: 0 auto;
 }
 
-#mission div:nth-child(2) div a h2{
+#quickLink > div > div div:nth-child(2) div a h2{
   font-family: 'Open Sans Condensed', sans-serif !important;
   font-size: 1.5em !important;
   color: #333;
+}
+
+#quickLink > div > div > div > div:nth-child(3){
+  margin-bottom: 3%;
+}
+
+#quickLink > div > div > div > div:nth-child(3) img{
+  margin-left: 0;
+}
+
+.row {
+  max-width: 100%;
 }
 
 .icons{
@@ -466,27 +438,36 @@ hr {
   padding-bottom: 2%;
 }
 
-#headContainer{
+#news-events #article1 #headContainer{
  margin-left: 18%;
  padding: 2% 2% 2% 0;
 }
 
-#headContainer .icons{
+#news-events #article1 #headContainer .icons{
  margin: 5% auto 0 0;
+ float: left;
 }
 
-#headContainer h1{
+#news-events #article1 #headContainer h1{
  font-size: 4em;
  float: left;
- color: #176FC7;
+ color: #0a0699;
 }
 
-#headContainer .graphicEle, #headContainer2 .graphicEle{
+#news-events #article1 #headContainer .graphicEle{
+
+}
+
+#news-events #article1 #headContainer .graphicEle, #news-events #article2 #headContainer2 .graphicEle{
   width: 100%;
   text-align: center;
 }
 
-#article1 > div:nth-child(2), #article1 > div:nth-child(3), #article1 > div:nth-child(4){
+#news-events #article1 #headContainer .graphicEle img, #news-events #article2 #headContainer2 .graphicEle img{
+  margin-left: 25%;
+}
+
+#news-events #article1 > div:nth-child(2), #news-events #article1 > div:nth-child(3), #news-events #article1 > div:nth-child(4){
   padding-left: 2% !important;
   padding-top: 3% !important;
 }
@@ -495,14 +476,14 @@ hr {
   width: 40%;
 }
 
-#article1 div:nth-child(2) div h3, #article1 div:nth-child(3) div h3, #article1 div:nth-child(4) div h3{
+#news-events #article1 div:nth-child(2) div h3, #news-events #article1 div:nth-child(3) div h3, #news-events #article1 div:nth-child(4) div h3{
  font-family: 'Lora', serif;
  color: #333;
  font-weight: bold;
  text-align: left;
 }
 
-#article1 div:nth-child(2) div p, #article1 div:nth-child(3) div p, #article1 div:nth-child(4) div p{
+#news-events #article1 div:nth-child(2) div p, #news-events #article1 div:nth-child(3) div p, #news-events #article1 div:nth-child(4) div p{
  color: #333;
  font-size: 1.2em;
  font-family: 'Open Sans Condensed', sans-serif;
@@ -524,32 +505,32 @@ hr {
 }
 
 .eventDate h3{
-  color: #176FC7 !important;
+  color: #0a0699 !important;
   text-align: center !important;
 }
 
 #news-events #article2{
-  background: #176FC7;
+  background: #0a0699;
   padding-top: 2%;
   padding-bottom: 2%;
 }
 
-#headContainer2{
+#news-events #article2 #headContainer2{
  margin: 0 auto;
  padding: 2% 2%;
 }
 
-#headContainer2 .icons{
+#news-events #article2 #headContainer2 .icons{
  margin: 5% auto 0 12%;
 }
 
-#headContainer2 h1{
+#news-events #article2 #headContainer2 h1{
  font-size: 4em;
  float: left;
  color: #FFF;
 }
 
-#article2 > div:nth-child(2), #article2 > div:nth-child(3), #article2 > div:nth-child(4){
+#news-events #article2 > div:nth-child(2), #news-events #article2 > div:nth-child(3), #news-events #article2 > div:nth-child(4){
   padding-left: 2% !important;
   padding-top: 3% !important;
 }
@@ -558,14 +539,14 @@ hr {
   width: 40%;
 }
 
-#article2 div:nth-child(2) div h3, #article2 div:nth-child(3) div h3, #article2 div:nth-child(4) div h3{
+#news-events #article2 div:nth-child(2) div h3, #news-events #article2 div:nth-child(3) div h3, #news-events #article2 div:nth-child(4) div h3{
  font-family: 'Lora', serif;
  color: #FFF;
  font-weight: bold;
  text-align: left;
 }
 
-#article2 div:nth-child(2) div p, #article2 div:nth-child(3) div p, #article2 div:nth-child(4) div p{
+#news-events #article2 div:nth-child(2) div p, #news-events #article2 div:nth-child(3) div p, #news-events #article2 div:nth-child(4) div p{
  color: #FFF;
  font-size: 1.2em;
  font-family: 'Open Sans Condensed', sans-serif;
@@ -617,14 +598,6 @@ hr {
 
 #global div div img{
   width: 100%;
-}
-
-#supply{
-  height: 500px;
-}
-
-#supply .columns{
-  padding: 0;
 }
 
 a .wrapper{
@@ -687,14 +660,14 @@ a .wrapper div:nth-child(2) h2:nth-child(2){
 }
 
 #resource-twit #headContainer .icons{
- margin: 5% 0 0 17%;
- width: 8%;
+ margin: 1% 0 0 21%;
+ width: 7%;
 }
 
 #resource-twit #headContainer h1{
  font-size: 4em;
  float: left;
- color: #176FC7;
+ color: #0a0699;
  width: 50%;
 }
 
@@ -727,7 +700,7 @@ a .wrapper div:nth-child(2) h2:nth-child(2){
 }
 
 #resource-twit #article2{
-  background: #176FC7;
+  background: #0a0699;
   padding-bottom: 2%;
 }
 
@@ -745,14 +718,16 @@ a .wrapper div:nth-child(2) h2:nth-child(2){
  float: left;
  color: #FFF;
 }
+
 #footer{
   height: 560px;
 	background: url(../img/map.jpg) no-repeat fixed 65% 100% / contain;
-  padding-top: 1%;
+  padding: 1% 0 5% 0;
 }
+
 #footer #footContact{
- margin: 0 auto;
- padding: 2% 2%;
+ margin: 0 auto 0 37%;
+ padding: 2% 0 2% 0;
  text-align: center;
  position: absolute;
  display: inline-block;
@@ -762,9 +737,9 @@ a .wrapper div:nth-child(2) h2:nth-child(2){
 }
 
 #footer #footContact .icons{
- margin: 5% 5% 0 auto;
+ margin: 4.5% 20% 0 auto;
  float: left;
- width: 17% !important;
+ width: 15% !important;
 }
 
 #footer #footContact h1{
@@ -773,11 +748,55 @@ a .wrapper div:nth-child(2) h2:nth-child(2){
  color: #FFF;
  float: left;
 }
+
 #footer #footContact .graphicEle{
   width: 100%;
-  margin: 0 auto 0 5%;
+  margin: 0 auto 0 15%;
   text-align: center;
   float: left;
+}
+
+#footer #footAddress{
+  position: absolute;
+  margin: 15% 0 0 31%;
+  float: left;
+  width: 50%;
+  text-align: center;
+  z-index: 3;
+}
+
+#footer #footAddress div:nth-child(1) h2, #footer #footAddress div:nth-child(1) p{
+  text-align: right;
+}
+
+#footer #footAddress div:nth-child(1) h2{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  color: #FFF;
+}
+
+#footer #footAddress div:nth-child(1) p{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1.2em;
+  color: #FFF;
+}
+
+#footer #footAddress div:nth-child(2){
+  text-align: center;
+}
+
+#footer #footAddress div:nth-child(3) p{
+  text-align: left;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1.2em;
+  color: #FFF;
+  margin-bottom: 0;
+}
+
+#footer #footAddress div:nth-child(3) p span{
+  font-weight: 700;
+  color: #FFF;
 }
 
 #benefits {
