--- a/css/app.css
+++ b/css/app.css
@@ -100,9 +100,23 @@
 }
 
 .top-bar {
-  width: 950px;
+  width: 1100px;
   padding-top: 1%;
   margin-top: 1%;
+}
+
+.row {
+  max-width: 100%;
+}
+
+.icons{
+  width: 10%;
+}
+
+.graphicEle{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 ul li.currentLink a:after {
@@ -153,7 +167,7 @@ ul li.slideUnder a {
 
 #headMenu li:last-child img{
   cursor: pointer;
-  width: 70%;
+  width: 90%;
 }
 
 /**/
@@ -161,29 +175,6 @@ span {
   color: #FF033E;
   font-size: 1em;
 }
-
-/*h2::before {
-  margin-left: -50%;
-  right: .5em;
-}
-
-h2::after {
-  margin-right: -50%;
-  left: .5em;
-}
-
-h2::before, h2::after {
-  border-bottom: 1px solid #ecaa1e;
-  border-top: 1px solid #ecaa1e;
-  content: "";
-  display: inline-block;
-  height: 0.3em;
-  position: relative;
-  vertical-align: middle;
-  width: 40%;
-  font-weight: 300;
-  text-transform: uppercase;
-}*/
 
 hr {
   height: 2px;
@@ -202,12 +193,7 @@ hr {
   float: left;
   padding-top: 6%;
 }
-/*#home #homeWrap #welcome .columns {
-  padding: 0 !important;
-}*/
-/*#home #homeWrap #welcome div:nth-child(1) {
-  float: right;
-}*/
+
 #home #homeWrap #welcome div:nth-child(1) .panel {
   position: relative;
   width: 100%;
@@ -231,9 +217,6 @@ hr {
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
   margin: 0 auto 2%;
 }
-/*#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 span:nth-child(1) {
-  color: #FF033E;
-}*/
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
   font-size: 2.5em;
   font-family: "Lato", sans-serif;
@@ -243,51 +226,15 @@ hr {
   margin-bottom: 11%;
 }
 
-/*#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2::after {
-  border: 0;
-  width: 0 !important;
-  margin: 0 !important;
-}*/
-/*#buttonsWrap{
-  width: 50%;
-  padding-left: 5%;
-}
-#buttonsWrap div.buttons{
-  background: #176FC7;
-  margin-right: 5%;
-  height: 30%;
-  cursor: pointer;
-  padding-bottom: .3%;
-  padding-top: .3%;
-}
-#buttonsWrap div.buttons:last-child{
-  margin-right: 0;
-}
-#buttonsWrap div.buttons img{
-  float: left;
-  width: 25%;
-}
-#buttonsWrap div.buttons div{
-  float: left;
-}
-#buttonsWrap div.buttons div h2:nth-child(1){
-  font-size: 1.5em !important;
-  margin-bottom: 1% !important;
-  text-align: left;
-  letter-spacing: 0 !important;
-}
-#buttonsWrap div.buttons div h2:nth-child(2){
-  font-size: 1em !important;
-  text-align: left;
-  letter-spacing: 0 !important;
-}*/
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro .downArr {
   margin: -5% auto 0;
   width: 40px;
 }
+
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro .downArr a img {
   width: 100%;
 }
+
 #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h1 {
   margin-bottom: 3%;
   margin-left: -10px !important;
@@ -296,10 +243,12 @@ hr {
   font-size: 10em;
   padding: 0 !important;
 }
+
 #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h1 span:nth-child(1) {
   color: #ecaa1e;
   font-size: 1em;
 }
+
 #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2 {
   font-size: 2.5em;
   height: 30px;
@@ -308,11 +257,7 @@ hr {
   text-align: left;
   letter-spacing: 9px;
 }
-/*#home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::before, #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h2::after {
-  border: 0;
-  width: 0 !important;
-  margin: 0 !important;
-}*/
+
 #home #homeWrap #welcome div:nth-child(1) .panel .row .introChrome h3 {
   font-size: 2.5em;
   width: 100%;
@@ -355,28 +300,75 @@ hr {
   width: 15%;
 }
 
+#mission{
+  height: 600px;
+  margin-top: 5%;
+  padding-top: 8%;
+}
+
+#mission .columns{
+  padding: 0;
+}
+
+#mission > div{
+  background: #0a0699;
+  padding: 5% 0;
+}
+
+#mission > div > div > div:nth-child(1) .icons{
+  margin-left: 30%;
+  padding-top: 1%;
+  float: left;
+  text-align: center;
+}
+
+#mission > div > div > div:nth-child(1) .icons img{
+  width: 30%;
+}
+
+#mission > div > div > div:nth-child(1) h1{
+  font-family: 'Lora', serif;
+  font-weight: 300;
+  font-size: 4em;
+  color: #FFF;
+  text-align: left;
+}
+
+#mission > div > div > div:nth-child(2){
+  padding-top: 1%;
+}
+
+#mission > div > div > div:nth-child(2) p{
+  color: #FFF;
+  font-size: 1.5em;
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-align: center;
+  padding: 1% 25% 3%;
+  margin-bottom: 0;
+}
+
 #quickLink > div {
   text-align: center;
   position: relative;
-  margin-top: 10%;
-  padding-top: 9%;
+  height: 100%;
 }
 
 #quickLink > div > div{
   background: #FFF;
-  padding-bottom: 2%;
   border-bottom: solid 5px #FF033E;
-  padding-top: 1%;
+  padding: 1% 0 2%;
+  height: 100%;
 }
 
 #quickLink > div > div .icons{
-  margin-left: 18%;
-  padding-top: 2%;
+  margin-left: 30%;
+  padding-top: 1%;
   float: left;
+  text-align: center;
 }
 
 #quickLink > div > div .icons img{
-  width: 70%;
+  width: 30%;
 }
 
 #quickLink > div > div h1{
@@ -384,7 +376,7 @@ hr {
   font-weight: 300;
   font-size: 4em;
   color: #0a0699;
-  width: 70%;
+  text-align: left;
 }
 
 #quickLink > div > div div:nth-child(2){
@@ -406,22 +398,13 @@ hr {
   margin-left: 0;
 }
 
-.row {
-  max-width: 100%;
-}
-
-.icons{
-  width: 10%;
-}
-
-.graphicEle{
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
+#news-events{
+  background: #0a0699;
 }
 
 #news-events #article1, #news-events #article2{
-  height: 950px;
+  padding-top: 8% !important;
+  padding-bottom: 5%;
 }
 
 #news-events div.row{
@@ -510,7 +493,7 @@ hr {
 }
 
 #news-events #article2{
-  background: #0a0699;
+  /*background: #0a0699;*/
   padding-top: 2%;
   padding-bottom: 2%;
 }
